[package]
name = "file-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
global-hotkey = "0.4.2"
rfd = "0.12.1"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
bytes = "1.5.0"
uuid = "1.6.1"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
local-ip-address = "0.5.6"
